# job-application-analysis-tool

./: .gitignore  README.md  pyproject.toml
src/: test.py
src/documents/: __init__.py  base_document.py  cover_letter.py  resume.py
src/models/base/: base.py
src/models/openai/: __init__.py  openai_gpt.py
src/report/: __init__.py  daily_report.py  job_application_report.py
src/search/apple/: __init__.py  apple_job_description.py  apple_requester.py  config.py
src/search/base/: Requester.py  __init__.py  job_description.py
src/search_jobs/apple/: apple_job_description.py  apple_requester.py
src/search_jobs/base/: Requester.py  __init__.py
src/search_jobs/models/: __init__.py
